worked on the users table and functionality for pagination

--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -1,5 +1,5 @@
-$white: #FFFFFF;
-$sec-color: #39CDCC;
-$pry-text-color: #213F7D;
-$sec-text-color: #545F7D;
-
+$white: #ffffff;
+$body-bg-color: #fbfbfb;
+$sec-color: #39cdcc;
+$pry-text-color: #213f7d;
+$sec-text-color: #545f7d;
