--- a/src/components/DashboardFrame/styles.scss
+++ b/src/components/DashboardFrame/styles.scss
@@ -6,10 +6,13 @@
 
   .body {
     display: flex;
+    background-color: theme.$body-bg-color;
 
     .content {
       padding: 60px;
       width: 80%;
+      height: calc(100vh - 223px);
+      overflow: auto;
     }
   }
 }
