--- a/src/components/Buttons/ButtonAlt/styles.scss
+++ b/src/components/Buttons/ButtonAlt/styles.scss
@@ -2,9 +2,7 @@
 
 .alt-btn {
   background: theme.$white;
-  color: theme.$sec-color;
   border-radius: 8px;
-  border: solid 1px theme.$sec-color;
   outline: none;
   box-shadow: none;
   width: 100%;
@@ -16,4 +14,5 @@
   text-align: center;
   letter-spacing: 0.1em;
   cursor: pointer;
+  white-space: nowrap;
 }
