--- a/src/components/SideBar/styles.scss
+++ b/src/components/SideBar/styles.scss
@@ -7,6 +7,10 @@
   padding-left: 30px;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.04);
 
+  @media screen and (max-width: 1000px) {
+    display: none;
+  }
+
   .sidebar {
     height: calc(100vh - 160px);
     overflow: auto;
