--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -8,7 +8,10 @@
     border-radius: 4px;
     padding: 30px;
     margin-top: 40px;
-    overflow: auto;
+
+    @media screen and (max-width: 1300px) {
+      overflow: auto;
+    }
 
     .table {
       width: 100%;
